// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded approved role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  flex: 1;
}

.c19 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c20 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c23 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #00BFA6;
  border-radius: 50%;
}

.c25 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c26 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c29 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c31 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c32 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c34 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  border: 1px solid;
  border-color: #222C59;
  border-radius: 2px;
}

.c40 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-left: 4px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 60px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c30 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-top: 24px;
}

.c30:focus-visible,
.teleport-button__force-focus-visible .c30 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c30:hover,
.teleport-button__force-hover .c30 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c30:active,
.teleport-button__force-active .c30 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c30:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c21 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.54);
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c12 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #00BFA6;
  color: #000000;
}

.c38 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #00BFA6;
  color: #000000;
  width: 10px;
}

.c39 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FFAB00;
  color: #000000;
  width: 10px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-right: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 8px;
}

.c37 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 16px;
}

.c41 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  color: rgba(255, 255, 255, 0.72);
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c27 {
  display: flex;
  align-items: baseline;
}

.c35 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c18 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c17 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c5 {
  background: #344179;
}

.c36 {
  background: rgba(255,255,255,0.07);
}

.c33 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              kind="success"
              style="font-weight: bold;"
            >
              APPROVED
            </span>
            <h3
              class="c8"
            >
              <div
                class="c0 c9"
              >
                <div
                  class="c10"
                  style="max-width: 120px;"
                  title="Sam"
                >
                  Sam
                </div>
                <div
                  class="c11"
                  style="flex-shrink: 0; white-space: nowrap;"
                >
                  is requesting roles:
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    admin
                  </div>
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    kaco
                  </div>
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    ziuzzow
                  </div>
                </div>
                <div
                  class="c13"
                >
                  for 
                  5 days
                  , starting 
                  12/01/2020 at 12:00AM
                </div>
              </div>
            </h3>
          </div>
          <div
            class="c14 c15"
          >
            <button
              class="c16"
              fill="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c17"
          style="position: relative;"
        >
          <div
            class="c18"
          />
          <div
            class="c19 c6"
            style="position: relative;"
          >
            <div
              class="c20"
              style="display: flex;"
            >
              <span
                class="c21 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c22"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                2 hours ago
              </span>
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c19 c6"
              style="position: relative;"
            >
              <div
                class="c23"
                style="display: flex;"
              >
                <span
                  class="c24 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c22"
              >
                <b>
                  alice
                </b>
                 
                <span>
                  approved
                   this request 
                  26 hours ago
                </span>
              </div>
            </div>
            <div
              class="c25"
              style="position: relative;"
            >
              <div
                class="c26 c27"
              >
                <h3
                  class="c28"
                >
                  alice
                </h3>
                <div
                  class="c13"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c29"
              >
                Approving for developer role not admin. Admins access is not needed for this request.
              </div>
            </div>
            <div
              class="c19 c6"
              style="position: relative;"
            >
              <div
                class="c23"
                style="display: flex;"
              >
                <span
                  class="c24 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c22"
              >
                <b>
                  test-long-user-name@testing.com
                </b>
                 
                <span>
                  approved
                   this request 
                  1 minute ago
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="c30"
        fill="filled"
      >
        Assume Roles
      </button>
    </div>
    <div
      class="c31"
    >
      <div
        class="c32 c1 c33"
      >
        <h3
          class="c28"
        >
          Reviewers
        </h3>
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c38"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c39"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="test-long-user-name@testing.com"
        >
          test-long-user-name@testing.com
        </div>
        <span
          class="c38"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c40"
      >
        <div
          class="c41"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded denied role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  flex: 1;
}

.c19 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c20 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c23 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c24 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c27 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c28 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #FF6257;
  border-radius: 50%;
}

.c30 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c31 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c33 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  border: 1px solid;
  border-color: #222C59;
  border-radius: 2px;
}

.c39 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-left: 4px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 60px;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c21 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.54);
}

.c29 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c12 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FF6257;
  color: #000000;
}

.c37 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FF6257;
  color: #000000;
  width: 10px;
}

.c38 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FFAB00;
  color: #000000;
  width: 10px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-right: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 8px;
}

.c36 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 16px;
}

.c40 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  color: rgba(255, 255, 255, 0.72);
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c25 {
  display: flex;
  align-items: baseline;
}

.c34 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c18 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c17 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c5 {
  background: #344179;
}

.c35 {
  background: rgba(255,255,255,0.07);
}

.c32 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              kind="danger"
              style="font-weight: bold;"
            >
              DENIED
            </span>
            <h3
              class="c8"
            >
              <div
                class="c0 c9"
              >
                <div
                  class="c10"
                  style="max-width: 120px;"
                  title="Sam"
                >
                  Sam
                </div>
                <div
                  class="c11"
                  style="flex-shrink: 0; white-space: nowrap;"
                >
                  is requesting roles:
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    admin
                  </div>
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    ruhh
                  </div>
                </div>
                <div
                  class="c13"
                >
                  for 
                  4 days
                  , starting 
                  12/02/2020 at 12:00AM
                </div>
              </div>
            </h3>
          </div>
          <div
            class="c14 c15"
          >
            <button
              class="c16"
              fill="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c17"
          style="position: relative;"
        >
          <div
            class="c18"
          />
          <div
            class="c19 c6"
            style="position: relative;"
          >
            <div
              class="c20"
              style="display: flex;"
            >
              <span
                class="c21 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c22"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                35 minutes ago
              </span>
            </div>
          </div>
          <div
            class="c23"
            style="position: relative;"
          >
            <div
              class="c24 c25"
            >
              <h3
                class="c26"
              >
                Sam
              </h3>
              <div
                class="c13"
              >
                35 minutes ago
              </div>
            </div>
            <div
              class="c27"
            >
              Some short request reason
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c19 c6"
              style="position: relative;"
            >
              <div
                class="c28"
                style="display: flex;"
              >
                <span
                  class="c29 icon icon-circlecross"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M15.5303 8.46967C15.8232 8.76256 15.8232 9.23744 15.5303 9.53033L13.0607 12L15.5303 14.4697C15.8232 14.7626 15.8232 15.2374 15.5303 15.5303C15.2374 15.8232 14.7626 15.8232 14.4697 15.5303L12 13.0607L9.53033 15.5303C9.23744 15.8232 8.76256 15.8232 8.46967 15.5303C8.17678 15.2374 8.17678 14.7626 8.46967 14.4697L10.9393 12L8.46967 9.53033C8.17678 9.23744 8.17678 8.76256 8.46967 8.46967C8.76256 8.17678 9.23744 8.17678 9.53033 8.46967L12 10.9393L14.4697 8.46967C14.7626 8.17678 15.2374 8.17678 15.5303 8.46967Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c22"
              >
                <b>
                  alice
                </b>
                 
                <span>
                  denied
                   this request 
                  26 hours ago
                </span>
              </div>
            </div>
            <div
              class="c23"
              style="position: relative;"
            >
              <div
                class="c24 c25"
              >
                <h3
                  class="c26"
                >
                  alice
                </h3>
                <div
                  class="c13"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c27"
              >
                Not today
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c30"
    >
      <div
        class="c31 c1 c32"
      >
        <h3
          class="c26"
        >
          Reviewers
        </h3>
      </div>
      <div
        class="c33 c34 c35"
      >
        <div
          class="c36"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c37"
          kind="danger"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c33 c34 c35"
      >
        <div
          class="c36"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c38"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c39"
      >
        <div
          class="c40"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  flex: 1;
}

.c22 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c23 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c26 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c27 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c30 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c31 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c33 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c41 {
  box-sizing: border-box;
  max-width: 500px;
  margin-bottom: 24px;
}

.c46 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c47 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c49 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  border: 1px solid;
  border-color: #222C59;
  border-radius: 2px;
}

.c54 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-left: 4px;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 60px;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c45 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c45:focus-visible,
.teleport-button__force-focus-visible .c45 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c45:hover,
.teleport-button__force-hover .c45 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c45:active,
.teleport-button__force-active .c45 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c45:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.54);
}

.c12 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c42 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  margin-bottom: 0;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
}

.c53 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FFAB00;
  color: #000000;
  width: 10px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-right: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 10px;
  margin-left: 4px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c29 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 8px;
}

.c32 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 16px;
}

.c40 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c52 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 16px;
}

.c55 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  color: rgba(255, 255, 255, 0.72);
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c28 {
  display: flex;
  align-items: baseline;
}

.c34 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c50 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c43 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 50px;
  height: 80px;
  font-size: 16px;
  padding: 16px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background: inherit;
  margin-top: 4px;
  resize: vertical;
}

.c43::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c43:hover,
.c43:focus,
.c43:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c43:read-only {
  cursor: not-allowed;
}

.c43:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c35 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c38 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c36 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c37 {
  opacity: 1;
}

.c39 {
  opacity: 0.5;
}

.c44 {
  font-size: 14px;
  min-height: 100px;
}

.c21 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c20 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c17 {
  font-style: italic;
}

.c18 {
  line-height: normal;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c5 {
  background: #344179;
}

.c51 {
  background: rgba(255,255,255,0.07);
}

.c48 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <h3
              class="c8"
            >
              <div
                class="c0 c9"
              >
                <div
                  class="c10"
                  style="max-width: 120px;"
                  title="Sam"
                >
                  Sam
                </div>
                <div
                  class="c11"
                  style="flex-shrink: 0; white-space: nowrap;"
                >
                  is requesting roles:
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    admin
                  </div>
                </div>
                <div
                  class="c13"
                >
                  for 
                  1 day
                  , starting 
                  12/05/2020 at 12:00AM
                </div>
              </div>
            </h3>
          </div>
          <div
            class="c14 c15"
          >
            <div
              class="c16 c17 c18"
              font-size="0"
            >
              Request expires in 
              2 hours
            </div>
            <button
              class="c19"
              fill="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c20"
          style="position: relative;"
        >
          <div
            class="c21"
          />
          <div
            class="c22 c6"
            style="position: relative;"
          >
            <div
              class="c23"
              style="display: flex;"
            >
              <span
                class="c24 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c25"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                1 minute ago
              </span>
            </div>
          </div>
          <div
            class="c26"
            style="position: relative;"
          >
            <div
              class="c27 c28"
            >
              <h3
                class="c29"
              >
                Sam
              </h3>
              <div
                class="c13"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c30"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
          </div>
          <div
            class="c31"
            style="position: relative;"
          >
            <div
              class="c27"
            >
              <h3
                class="c32"
              >
                loggedInUsername
                 - add a review
              </h3>
            </div>
            <div
              class="c30"
            >
              <div
                class="c33 c34"
              >
                <label
                  class="c35"
                >
                  <input
                    checked=""
                    class="c36"
                    name="DENIED"
                    type="radio"
                    value="DENIED"
                  />
                  <span
                    class="c37"
                  >
                    Reject request
                  </span>
                </label>
                <label
                  class="c35"
                >
                  <input
                    class="c36"
                    name="APPROVED"
                    type="radio"
                    value="APPROVED"
                  />
                  <span
                    class="c37"
                  >
                    Approve short-term access
                     (1 day)
                  </span>
                </label>
                <label
                  class="c38"
                >
                  <input
                    class="c36"
                    disabled=""
                    name="PROMOTED"
                    type="radio"
                    value="PROMOTED"
                  />
                  <span
                    class="c39"
                  >
                    <div
                      class="c0 c1"
                    >
                      <div
                        class="c0 c6"
                      >
                        <div
                          class="c40"
                        >
                          Approve long-term access via Access List with the requested resources
                        </div>
                      </div>
                    </div>
                  </span>
                </label>
              </div>
              <div
                class="c41"
              >
                <label
                  class="c42"
                >
                  Message
                  <textarea
                    autocomplete="off"
                    class="c43 c44"
                    placeholder="Optional message..."
                  />
                </label>
              </div>
              <button
                class="c45"
                fill="filled"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c46"
    >
      <div
        class="c47 c1 c48"
      >
        <h3
          class="c29"
        >
          Reviewers
        </h3>
      </div>
      <div
        class="c49 c50 c51"
      >
        <div
          class="c52"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c53"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c49 c50 c51"
      >
        <div
          class="c52"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c53"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c54"
      >
        <div
          class="c55"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending search based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  flex: 1;
}

.c22 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c23 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c26 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c27 {
  box-sizing: border-box;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #0C143D;
}

.c30 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c31 {
  box-sizing: border-box;
  padding-top: 0;
  padding-left: 16px;
  padding-right: 0;
  padding-bottom: 16px;
  background-color: #344179;
}

.c35 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c37 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c45 {
  box-sizing: border-box;
  max-width: 500px;
  margin-bottom: 24px;
}

.c50 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c51 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c53 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  border: 1px solid;
  border-color: #222C59;
  border-radius: 2px;
}

.c58 {
  box-sizing: border-box;
  margin-top: 16px;
  margin-left: 4px;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 60px;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c49 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c49:focus-visible,
.teleport-button__force-focus-visible .c49 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c49:hover,
.teleport-button__force-hover .c49 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c49:active,
.teleport-button__force-active .c49 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c49:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c24 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.54);
}

.c12 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c46 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  margin-bottom: 0;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
}

.c57 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0;
  background: #FFAB00;
  color: #000000;
  width: 10px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-right: 4px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 10px;
  margin-left: 4px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 300;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c29 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 8px;
}

.c36 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-right: 16px;
}

.c44 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c56 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 600;
  line-height: 20px;
  letter-spacing: 0.015px;
  margin-right: 16px;
}

.c59 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
  color: rgba(255, 255, 255, 0.72);
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
  align-items: baseline;
  flex-wrap: wrap;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c28 {
  display: flex;
  align-items: baseline;
}

.c38 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c54 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c47 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 50px;
  height: 80px;
  font-size: 16px;
  padding: 16px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background: inherit;
  margin-top: 4px;
  resize: vertical;
}

.c47::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c47:hover,
.c47:focus,
.c47:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c47:read-only {
  cursor: not-allowed;
}

.c47:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c33 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c33>thead>tr>th,
.c33>tbody>tr>th,
.c33>tfoot>tr>th,
.c33>thead>tr>td,
.c33>tbody>tr>td,
.c33>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c33>thead>tr>th:first-child,
.c33>tbody>tr>th:first-child,
.c33>tfoot>tr>th:first-child,
.c33>thead>tr>td:first-child,
.c33>tbody>tr>td:first-child,
.c33>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c33>thead>tr>th:last-child,
.c33>tbody>tr>th:last-child,
.c33>tfoot>tr>th:last-child,
.c33>thead>tr>td:last-child,
.c33>tbody>tr>td:last-child,
.c33>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c33>tbody>tr>td {
  vertical-align: middle;
}

.c33>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c33>thead>tr>th svg {
  height: 12px;
}

.c33>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c33 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c33 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c33 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c33 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c39 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c42 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c40 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c41 {
  opacity: 1;
}

.c43 {
  opacity: 0.5;
}

.c48 {
  font-size: 14px;
  min-height: 100px;
}

.c21 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c34 {
  width: 90%;
}

.c34>tbody>tr>td {
  vertical-align: middle;
}

.c20 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c17 {
  font-style: italic;
}

.c18 {
  line-height: normal;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
}

.c5 {
  background: #344179;
}

.c32 {
  margin: 0 auto;
}

.c55 {
  background: rgba(255,255,255,0.07);
}

.c52 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <h3
              class="c8"
            >
              <div
                class="c0 c9"
              >
                <div
                  class="c10"
                  style="max-width: 120px;"
                  title="Sam"
                >
                  Sam
                </div>
                <div
                  class="c11"
                  style="flex-shrink: 0; white-space: nowrap;"
                >
                  is requesting roles:
                </div>
                <div
                  class="c0"
                >
                  <div
                    class="c12"
                    kind="secondary"
                  >
                    test
                  </div>
                </div>
                <div
                  class="c13"
                >
                  for 
                  2 days
                  , starting 
                  12/04/2020 at 12:00AM
                </div>
              </div>
            </h3>
          </div>
          <div
            class="c14 c15"
          >
            <div
              class="c16 c17 c18"
              font-size="0"
            >
              Request expires in 
              1 hour
            </div>
            <button
              class="c19"
              fill="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c20"
          style="position: relative;"
        >
          <div
            class="c21"
          />
          <div
            class="c22 c6"
            style="position: relative;"
          >
            <div
              class="c23"
              style="display: flex;"
            >
              <span
                class="c24 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c25"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                1 minute ago
              </span>
            </div>
          </div>
          <div
            class="c26"
            style="position: relative;"
          >
            <div
              class="c27 c28"
            >
              <h3
                class="c29"
              >
                Sam
              </h3>
              <div
                class="c13"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c30"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
            <div
              class="c31 c32"
            >
              <table
                class="c33 c34"
              >
                <thead>
                  <tr>
                    <th
                      style="cursor: default;"
                    >
                      Cluster Name
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Kind
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Name
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      app-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      db
                    </td>
                    <td>
                      db-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      node
                    </td>
                    <td>
                      node-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      user_group
                    </td>
                    <td>
                      user-group-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      kube_cluster
                    </td>
                    <td>
                      kube-cluster-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      windows_desktop
                    </td>
                    <td>
                      windows-desktop-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      Some Friendly Name
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c35"
            style="position: relative;"
          >
            <div
              class="c27"
            >
              <h3
                class="c36"
              >
                loggedInUsername
                 - add a review
              </h3>
            </div>
            <div
              class="c30"
            >
              <div
                class="c37 c38"
              >
                <label
                  class="c39"
                >
                  <input
                    checked=""
                    class="c40"
                    name="DENIED"
                    type="radio"
                    value="DENIED"
                  />
                  <span
                    class="c41"
                  >
                    Reject request
                  </span>
                </label>
                <label
                  class="c39"
                >
                  <input
                    class="c40"
                    name="APPROVED"
                    type="radio"
                    value="APPROVED"
                  />
                  <span
                    class="c41"
                  >
                    Approve short-term access
                     (2 days)
                  </span>
                </label>
                <label
                  class="c42"
                >
                  <input
                    class="c40"
                    disabled=""
                    name="PROMOTED"
                    type="radio"
                    value="PROMOTED"
                  />
                  <span
                    class="c43"
                  >
                    <div
                      class="c0 c1"
                    >
                      <div
                        class="c0 c6"
                      >
                        <div
                          class="c44"
                        >
                          Approve long-term access via Access List with the requested resources
                        </div>
                      </div>
                    </div>
                  </span>
                </label>
              </div>
              <div
                class="c45"
              >
                <label
                  class="c46"
                >
                  Message
                  <textarea
                    autocomplete="off"
                    class="c47 c48"
                    placeholder="Optional message..."
                  />
                </label>
              </div>
              <button
                class="c49"
                fill="filled"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c50"
    >
      <div
        class="c51 c1 c52"
      >
        <h3
          class="c29"
        >
          Reviewers
        </h3>
      </div>
      <div
        class="c53 c54 c55"
      >
        <div
          class="c56"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c57"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c53 c54 c55"
      >
        <div
          class="c56"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c57"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c58"
      >
        <div
          class="c59"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;
